@@ -449,11 +449,3 @@ CFLAGS="-I$TARGET_DIR/include -I$TARGET_DIR/usr/local/include" LDFLAGS="-L$TARGE
 	--enable-zlib
 make -j $jval && make install
 
-#dirty hack
-#replace shipped ffmpeg linux libs with compiled ones from here!
-#also check modules/ffmpeg/CMakeLists.txt for lib version/name changes!
-#cd $BUILD_DIR
-#mv ../../bin/linux ../../bin/linux-shipped
-#cp -r ../target/lib ../../bin/linux
-#some ffmpeg libs are build in a different shared target folder
-#cp ../target/usr/local/lib/* ../../bin/linux/
